--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 01 2022 21:02:58 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jul 02 2022 08:54:35 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62bac04d2f682a544e55ae0c" data-wf-site="62bac04d2f682add7755ae04">
 <head>
   <meta charset="utf-8">
@@ -37,7 +37,7 @@
   </div>
   <div class="section wf-section">
     <div class="container-3 w-container">
-      <h3 class="section-title">Laatse projecten</h3>
+      <h3 class="section-title">Laatste projecten</h3>
       <div class="w-layout-grid grid"><img class="image img" src="images/284854002_549767736813970_2179130489036556485_n.jpg" width="957" height="500" alt="" sizes="(max-width: 767px) 92vw, 500px" id="w-node-f1dfa96a-8f90-4dba-f552-ef43bab35590-4e55ae0c" loading="lazy" srcset="images/284854002_549767736813970_2179130489036556485_n-p-500.jpeg 500w, images/284854002_549767736813970_2179130489036556485_n-p-800.jpeg 800w, images/284854002_549767736813970_2179130489036556485_n.jpg 1080w"><img src="images/279391947_521926726264738_745773523991188401_n.jpg" loading="lazy" id="w-node-_345c75e1-6d3c-ef86-ca24-071be3167a19-4e55ae0c" srcset="images/279391947_521926726264738_745773523991188401_n-p-500.jpeg 500w, images/279391947_521926726264738_745773523991188401_n.jpg 720w" sizes="(max-width: 767px) 92vw, 500px" alt="" class="img"><img src="images/290550907_562216592235751_5481480280838836195_n.jpg" loading="lazy" id="w-node-_40bd1a1f-3571-f1b1-cc39-96b411f3f75e-4e55ae0c" srcset="images/290550907_562216592235751_5481480280838836195_n-p-500.jpeg 500w, images/290550907_562216592235751_5481480280838836195_n-p-800.jpeg 800w, images/290550907_562216592235751_5481480280838836195_n-p-1080.jpeg 1080w, images/290550907_562216592235751_5481480280838836195_n-p-1600.jpeg 1600w, images/290550907_562216592235751_5481480280838836195_n.jpg 2048w" sizes="(max-width: 767px) 92vw, 500px" alt="" class="img"><img src="images/280379935_528237918966952_823852397372237805_n.jpg" loading="lazy" id="w-node-_15c3b8be-05ae-7452-4635-b4c53eab551a-4e55ae0c" srcset="images/280379935_528237918966952_823852397372237805_n-p-500.jpeg 500w, images/280379935_528237918966952_823852397372237805_n-p-800.jpeg 800w, images/280379935_528237918966952_823852397372237805_n-p-1080.jpeg 1080w, images/280379935_528237918966952_823852397372237805_n-p-1600.jpeg 1600w, images/280379935_528237918966952_823852397372237805_n.jpg 2048w" sizes="(max-width: 767px) 92vw, 500px" alt="" class="img"><img src="images/286706033_552495113207899_4551805995205248256_n.jpg" loading="lazy" id="w-node-fd8256cd-9459-209a-accd-5d6b5d4b489e-4e55ae0c" srcset="images/286706033_552495113207899_4551805995205248256_n-p-500.jpeg 500w, images/286706033_552495113207899_4551805995205248256_n-p-800.jpeg 800w, images/286706033_552495113207899_4551805995205248256_n.jpg 960w" sizes="(max-width: 767px) 92vw, 500px" alt="" class="img"><img src="images/286004375_552629839861093_2179178038444897783_n.jpg" loading="lazy" id="w-node-_3952dac1-c0c0-5691-d375-5f86218da2ff-4e55ae0c" srcset="images/286004375_552629839861093_2179178038444897783_n-p-500.jpeg 500w, images/286004375_552629839861093_2179178038444897783_n-p-800.jpeg 800w, images/286004375_552629839861093_2179178038444897783_n.jpg 960w" sizes="(max-width: 767px) 92vw, 500px" alt="" class="img"></div>
     </div>
   </div>
@@ -85,7 +85,7 @@
       <a href="https://www.facebook.com/danny.bosmans.581" class="w-inline-block"><img src="images/7e3b29aa5e0961b95a0f9dfed14eb797.png" loading="lazy" width="59" alt="" class="image-5"></a>
     </div>
     <div class="w-container">
-      <div class="text-block-3">Made By Skemil. © 2022.</div>
+      <div class="text-block-3">Made By <a href="http://www.skemil.com">Skemil</a>. © 2022.</div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62bac04d2f682add7755ae04" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
