--- a/projecten.html
+++ b/projecten.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jul 01 2022 21:02:58 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jul 02 2022 08:54:35 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62bc617ae899f3220aaf6acd" data-wf-site="62bac04d2f682add7755ae04">
 <head>
   <meta charset="utf-8">
@@ -137,7 +137,7 @@
       <a href="https://www.facebook.com/danny.bosmans.581" class="w-inline-block"><img src="images/7e3b29aa5e0961b95a0f9dfed14eb797.png" loading="lazy" width="59" alt="" class="image-5"></a>
     </div>
     <div class="w-container">
-      <div class="text-block-3">Made By Skemil. © 2022.</div>
+      <div class="text-block-3">Made By <a href="http://www.skemil.com">Skemil</a>. © 2022.</div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62bac04d2f682add7755ae04" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
